# smmap

./: CMakeLists.txt  README.md  package.xml  test.m
cmake/Modules/: FindSVM.cmake
cmake/modules/: FindNOMAD.cmake
include/smmap/: adaptive_jacobian_model.h  band_rrt.h  classifier.h  constraint_jacobian_model.h  conversions.h  cvxopt_solvers.h  deformable_controller.h  deformable_controller.hpp  deformable_model.h  diminishing_rigidity_model.h  gripper_motion_generator.h  grippers.hpp  jacobian_model.h  kalman_filter_multiarm_bandit.hpp  knn_classifier.h  learned_transitions.h  least_squares_controller_random_sampling.h  least_squares_controller_with_object_avoidance.h  least_squares_jacobian_model.h  least_squares_stretching_constraint_controller.h  min_max_transformer.hpp  model_prediction_tester.h  model_test.h  nn_classifier.h  no_classifier.h  nomad_solvers.h  parabola.h  planner.h  prm_helper.h  quinlan_rubber_band.h  robot_interface.h  robot_interface.hpp  ros_communication_helpers.h  ros_communication_helpers.hpp  rrt_Helper.h  rrt_Helper.hpp  rrt_helper.h  rubber_band.hpp  straight_line_controller.h  stretching_avoidance_controller.h  (+22 more)
logs/cloth_placemat_live_robot/: cover_points__cloth_near_robot.compressed  cover_points__to_left_of_robot_rotated_table.compressed
logs/cloth_placemat_live_robot/default/: cover_points__cloth_near_robot_rotated_table.compressed  (+1 more)
logs/cloth_single_pole/: control_error_IROS_cloth_single_pole.m  single_stretching_factor_IROS_cloth_single_pole.m
logs/cloth_wafr/: control_error_IROS_cloth_wafr.m
logs/rope_cylinder_two_grippers/: control_error_IROS_rope_cylinder.m  single_stretching_factor_IROS_rope_cylinder.m
logs/rope_zig_match/: control_error_IROS_rope_zig.m
nodes/: model_test_node.cpp  planner_test_node.cpp  smmap_test_node.cpp  svm_tester.cpp  to_trajectory_tester.cpp  torch_tester.cpp  transition_learning_data_generation_node.cpp
scripts/: classification.py  compute_class_balance.py  ijrr_trials.sh  regression.py  test_constraint_jacobian.cpp  test_voxnet_data.py  test_voxnet_files.py  transition_file_browswer.py
scripts/Mengyao/: mengyao_run_trial.py  occlusion_cloth_wafr.py
smmap/: CMakeLists.txt  package.xml
smmap/cmake/modules/: FindGUROBI.cmake
smmap/include/smmap/: adaptive_jacobian_model.h  collision_helpers.hpp  cvxopt_solvers.hpp  deformable_model.h  diminishing_rigidity_model.h  gripper_collision_checker.h  gripper_collision_checker.hpp  gripper_helpers.h  gripper_helpers.hpp  grippers.hpp  gurobi_solvers.h  jacobian_model.h  kalman_filter_multiarm_bandit.hpp  least_squares_jacobian_model.h  model_set.h  optimization.hpp  planner.h  point_reflector.hpp  robot_interface.hpp  ros_communication_helpers.hpp  ros_params.h  ros_params.hpp  task.h  task.hpp  task_function_pointer_types.h  task_specification.h  task_specification_implementions.hpp  timing.hpp  trajectory.h  trajectory.hpp  ucb_multiarm_bandit.hpp  visualization_tools.h  visualization_tools.hpp
smmap/launch/: cloth_cylinder.launch  cloth_cylinder_params.launch  cloth_cylinder_sim_only.launch  cloth_single_pole_params.launch  cloth_table.launch  cloth_table_params.launch  cloth_table_sim_only.launch  cloth_wafr_params.launch  colab_folding.launch  colab_folding_params.launch  colab_folding_sim_only.launch  generic_experiment.launch  generic_experiment_params_only.launch  generic_experiment_sim_only.launch  rope_cylinder.launch  rope_cylinder_params.launch  rope_cylinder_sim_only.launch  single_pole_params.launch  smmap.launch
smmap/nodes/: kalman_filter_synthetic_trials.cpp  scratchpad.cpp  smmap_test_node.cpp  test_node.cpp
smmap/scripts/: adaptive_correlation_strength_trials.py  cloth_cylinder_multi_model_simulation_noise_trials.py  cloth_table_550_paper_baseline_trials.py  cloth_table_deformability_trials.py  cloth_wafr_deformability_trials.py  create_screenshots.sh  create_screenshots_cloth_wafr.sh  generate_screenshots_for_dmitry.sh  generic_trials.py  generic_wafr_trials.py  multi_model_trial.sh  rope_cylinder_deformability_trials.py  rope_cylinder_multi_model_simulation_noise_trials.py  run_trial.py  synthetic_trials.sh  test_cloth_table_baseline_noise.sh  test_cloth_table_deformability.sh  test_colab_folding_baseline_noise.sh  test_colab_folding_deformability.sh  test_rope_cylinder_baseline_noise.sh  test_rope_cylinder_deformability.sh  test_rope_cylinder_kalman_parameters.sh  trial_types.sh  wafr_trials.py  wafr_trials_baseline.py  wafr_trials_cloth_table_regret.py
smmap/scripts/z_old/: cloth_cylinder_multi_model_simulation_noise_trials.py  cloth_table_550_paper_baseline_trials.py  cloth_wafr_deformability_trials.py  rope_cylinder_550_paper_baseline_trials.py  rope_cylinder_deformability_trials.py
smmap/src/: adaptive_jacobian_model.cpp  cvxopt_solvers.cpp  deformable_model.cpp  diminishing_rigidity_model.cpp  gripper_collision_checker.cpp  gurobi_solvers.cpp  jacobian_model.cpp  least_squares_jacobian_model.cpp  model_set.cpp  planner.cpp  robot_interface.cpp  task.cpp  task_specification.cpp  visualization_tools.cpp
src/: adaptive_jacobian_model.cpp  band_rrt.cpp  classifier.cpp  constraint_jacobian_model.cpp  conversions.cpp  cvxopt_solvers.cpp  deformable_model.cpp  diminishing_rigidity_model.cpp  gripper_motion_generator.cpp  gurobi_solvers.cpp  jacobian_model.cpp  knn_classifier.cpp  learned_transitions.cpp  least_squares_controller_random_sampling.cpp  least_squares_controller_with_object_avoidance.cpp  least_squares_jacobian_model.cpp  least_squares_stretching_constraint_controller.cpp  mlp_classifier.cpp  model_prediction_tester.cpp  model_test.cpp  models_bindings.cpp  nn_classifier.cpp  nomad_solvers.cpp  parabola.cpp  planner.cpp  prm_helper.cpp  quinlan_rubber_band.cpp  robot_interface.cpp  ros_communication_helpers.cpp  rrt_Helper.cpp  rrt_helper.cpp  straight_line_controller.cpp  stretching_avoidance_controller.cpp  stretching_avoidance_controller.cpp.disable  stretching_constraint_controller.cpp  svm_classifier.cpp  task.cpp  task_framework.cpp  task_specification.cpp  task_specification_implementations.cpp  (+11 more)
(+8 files in other folders)
