<?xml version="1.0"?>
<package>
    <name>smmap</name>
    <version>0.0.1</version>
    <description>The Simultaneous Manipulation, Model Building, and Planning package</description>

    <maintainer email="dale.mcconachie@ssengineering.ca">Dale McConachie</maintainer>
    <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>arc_utilities</build_depend>
    <build_depend>smmap_utilities</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>kinematics_toolbox</build_depend>
    <build_depend>sdf_tools</build_depend>
    <build_depend>deformable_manipulation_msgs</build_depend>
    <build_depend>deformable_manipulation_experiment_params</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_eigen</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pybind11_catkin</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>arc_utilities</run_depend>
    <run_depend>smmap_utilities</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>kinematics_toolbox</run_depend>
    <run_depend>sdf_tools</run_depend>
    <run_depend>deformable_manipulation_msgs</run_depend>
    <run_depend>deformable_manipulation_experiment_params</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_eigen</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>pybind11_catkin</run_depend>

</package>
